--- a/todo.txt
+++ b/todo.txt
@@ -5,11 +5,13 @@ resend otp feature
 login stayed login untill logged out manually
 make variables private
 fix auto date picker
+stabilazize
+make it responsive
 
 In-Progress: *****************************************
-export data in excel and pdf
 
 Done: ************************************************
+export data in excel and pdf
 notification hiding things
 search in inventory
 make inventory page
