added profile section

--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@ notification comeing frol right
 In-Progress: *****************************************
 
 Done: ************************************************
+complete profile section
 write test cases
 fix lint issues
 table in delivery boy
