--- a/todo.txt
+++ b/todo.txt
@@ -2,12 +2,16 @@ Todo: ************************************************
 filter in inventory in delivery personn, date range
 take input of products while making entry
 show product added in entry details model popup
-disable save if rate not entered while adding new product
-show products added in table
+worok on exports
+show pending units in customer page
+ask if product is elibable for recieve
+add comments in all component
+make product linkable
 
 CHANGES **********************************************
 
 In-Progress: *****************************************
+show products added in table
 
 ADVANCE **********************************************
 Export in Excel in which sheets are created for seperate customers and total added in the end 
@@ -33,6 +37,7 @@ notification comeing frol right
 
 Done: ************************************************
 **V1.0.1**
+disable save if rate not entered while adding new product
 take input of products in new entry
 Note stock items (dynamic)
 reverse exporing data, lates will be in bottom
