--- a/todo.txt
+++ b/todo.txt
@@ -5,13 +5,12 @@ take input of products while making entry
 show product added in entry details model popup
 worok on exports
 show pending units in customer page
-ask if product is elibable for recieve
 add comments in all component
 
 CHANGES **********************************************
 
 In-Progress: *****************************************
-make product linkable
+ask if product is elibable for recieving
 
 ADVANCE **********************************************
 Export in Excel in which sheets are created for seperate customers and total added in the end 
@@ -37,6 +36,7 @@ notification comeing frol right
 
 Done: ************************************************
 **V1.0.1**
+make product linkable
 show products added in table
 disable save if rate not entered while adding new product
 take input of products in new entry
